tests/baselines/reference/types.forAwait.es2018.3.errors.txt
error TS2318: Cannot find global type 'AsyncIterableIterator'.
types.forAwait.es2018.3.ts(3,27): error TS2495: Type '{}' is not an array type or a string type.
types.forAwait.es2018.3.ts(5,21): error TS2495: Type '{}' is not an array type or a string type.
types.forAwait.es2018.3.ts(10,27): error TS2495: Type '{}' is not an array type or a string type.
types.forAwait.es2018.3.ts(12,21): error TS2495: Type '{}' is not an array type or a string type.


!!! error TS2318: Cannot find global type 'AsyncIterableIterator'.
==== types.forAwait.es2018.3.ts (4 errors) ====
    async function f1() {
        let y: number;
        for await (const x of {}) {
                              ~~
!!! error TS2495: Type '{}' is not an array type or a string type.
        }
        for await (y of {}) {
                        ~~
!!! error TS2495: Type '{}' is not an array type or a string type.
        }
    }
    async function* f2() {
        let y: number;
        for await (const x of {}) {
                              ~~
!!! error TS2495: Type '{}' is not an array type or a string type.
        }
        for await (y of {}) {
                        ~~
!!! error TS2495: Type '{}' is not an array type or a string type.
        }
    }
    